--- a/STarTBack.html
+++ b/STarTBack.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -138,7 +138,7 @@
         <div class="section">
             <h2>Psychosocial Factors</h2>
             <div class="question">
-                <label>5. Do you think it’s not safe to be physically active?</label>
+                <label>5. Do you think it's not safe to be physically active?</label>
                 <div class="radio-group">
                     <input type="radio" id="q5_agree" name="q5" value="Agree" required>
                     <label for="q5_agree">Agree</label>
